# ChessIP

./: .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS
config/: window.txt
src/: Application.cpp  Application.h  Board.cpp  Board.h  Inventory.cpp  Inventory.h  PieceFactory.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SoundPlayer.cpp  SoundPlayer.h  Utils.h  main.cpp  outlineFix.frag
src/pieces/: Alchemist.cpp  Alchemist.h  AllPiecesHeader.h  Archer.cpp  Archer.h  BasePiece.h  BlackAlchemist.cpp  BlackAlchemist.h  BlackArcher.cpp  BlackArcher.h  BlackBuilder.cpp  BlackBuilder.h  BlackDragon.cpp  BlackDragon.h  BlackGrimReaper.cpp  BlackGrimReaper.h  BlackKing.cpp  BlackKing.h  BlackKnight.cpp  BlackKnight.h  BlackPlagueDoctor.cpp  BlackPlagueDoctor.h  BlackRogue.cpp  BlackRogue.h  BlackSamurai.cpp  BlackSamurai.h  BlackTrebuchet.cpp  BlackTrebuchet.h  BlackWarlord.cpp  BlackWarlord.h  BlackWitch.cpp  BlackWitch.h  Builder.cpp  Builder.h  GrimReaper.cpp  GrimReaper.h  King.cpp  King.h  PlagueDoctor.cpp  PlagueDoctor.h  (+34 more)
